fix: high contrast styling for cards ui

--- a/src/reports/components/instance-details.scss
+++ b/src/reports/components/instance-details.scss
@@ -14,6 +14,7 @@
 
 .instance-details-card {
     border-radius: 4px;
+    border: 1px solid $card-border;
     outline-style: 'border-style';
     box-shadow: 0px 0.6px 1.8px $box-shadow-108, 0px 3.2px 7.2px $box-shadow-132;
     margin-bottom: 16px;
@@ -25,8 +26,13 @@
     outline: 5px solid $communication-tint-10;
 }
 
+.instance-details-card.selected {
+    border: 1px solid transparent;
+}
+
 .instance-details-card:focus {
     outline: 2px solid $primary-text;
+    outline-offset: 2px;
 }
 
 .instance-details-card.selected:focus {
